# simplicity

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  portainer-compose.yml  shell.nix
.devcontainer/: !.devcontainer.json  devcontainer.json
api/: Cargo.toml  Dockerfile  Dockerfile.dev  Rocket.toml  package-lock.json
api/src/: main.rs
api/src/domain/: mod.rs  repeat.rs  subtask.rs  user.rs
api/src/repos/: couchdb_repo.rs  last_update_repo.rs  mod.rs  project_repo.rs  tag_repo.rs  task_repo.rs  ttl_repo.rs  users_repo.rs
api/src/routes/: mod.rs  projects.rs  scheduled.rs  tags.rs  tasks.rs  users.rs
api/src/services/: api_error.rs  auth.rs  fairing.rs  guard.rs  logger.rs  mod.rs  mongo.rs
client/: .env.development  Dockerfile  Dockerfile.dev  README.md  index.html  manifest.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.vue  main.js
client/src/api/: helperApi.js  helperTestData.js  projects.js  tags.js  tasks.js
client/src/assets/: base.css  main.css
client/src/db/: helpers.js  projects.js  tags.js  tasks.js
client/src/mixins/: getTasksMixin.js  repeat.js  ttlHelper.js
client/src/models/: task.js
client/src/router/: index.js
client/src/store/: alerts.js  auth.js  index.js  projects.js  tasks.js
client/src/views/: HomeView.vue  InboxView.vue  LaterView.vue  LoginView.vue  (+7 more)
cron/: Crontab  Dockerfile  entrypoint.sh  script.sh
migrations/: migrate-mongo-config.js
migrations/migrations/: 20250115181712-add-order-to-tasks.js  20250122172842-add-comments-and-subtasks.js
(+36 files in other folders)
