[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
bson = "2.13.0"
dotenv = "0.15.0"
futures = "0.3.31"
google-jwt-signin = "0.5.0"
google-jwt-verify = "0.3.0"
mongodb = "3.1.0"
# google-signin = "0.3.0"
rocket = { version="0.5.1", features = ["json"] }
serde = "1.0.214"
thiserror = "1.0.67"
