[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
bson = { version="2.13.0", features = ["chrono-0_4"] }
chrono = "0.4.39"
dotenv = "0.15.0"
futures = "0.3.31"
google-jwt-signin = "0.5.0"
log = "0.4.22"
mongodb = "3.1.0"
rocket = { version="0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.214"
